[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/mage/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies.png" type="Texture" id=2]
[ext_resource path="res://Audio/sound_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/sound_explode.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=2]

length = 6.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=3]

resource_name = "shoot"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 5, 6, 7, 8, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
} ]
}

[sub_resource type="Animation" id=4]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 5.0

[sub_resource type="RayShape2D" id=7]

custom_solver_bias = 0.0
length = 20.0

[sub_resource type="RayShape2D" id=8]

custom_solver_bias = 0.0
length = 20.0

[node name="enemy" type="RigidBody2D"]

input_pickable = false
collision_layer = 64
collision_mask = 97
mode = 2
mass = 20.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 4
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="enabler" type="VisibilityEnabler2D" parent="." index="0"]

scale = Vector2( 30, 30 )
rect = Rect2( -12, -5, 24, 10 )
pause_animations = true
freeze_bodies = true
pause_particles = false
pause_animated_sprites = true
process_parent = false
physics_process_parent = false
_sections_unfolded = [ "Transform" ]

[node name="anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
anims/poof = SubResource( 2 )
anims/shoot = SubResource( 3 )
anims/walk = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="sprite" type="Sprite" parent="." index="2"]

scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 10
_sections_unfolded = [ "Animation", "Transform" ]

[node name="shape1" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -3, -9 )
scale = Vector2( 3, 3 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="shape4" type="CollisionShape2D" parent="." index="4"]

position = Vector2( -3, 9 )
scale = Vector2( 3, 3 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="shape2" type="CollisionShape2D" parent="." index="5"]

position = Vector2( 6, -18 )
rotation = 4.71239
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="shape3" type="CollisionShape2D" parent="." index="6"]

position = Vector2( -9, -18 )
rotation = 1.5708
shape = SubResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="raycast_left" type="RayCast2D" parent="." index="7"]

position = Vector2( -21, -9 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 60 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="raycast_right" type="RayCast2D" parent="." index="8"]

position = Vector2( 15, -9 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 60 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="sound_hit" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sound_explode" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="death_timer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="bullet_shoot" type="Position2D" parent="." index="12"]

position = Vector2( -21.3194, 4.45703 )
_sections_unfolded = [ "Z Index" ]

[node name="shoot_timer" type="Timer" parent="." index="13"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[connection signal="timeout" from="death_timer" to="." method="queue_free"]

[connection signal="timeout" from="shoot_timer" to="." method="_pause_and_shoot"]


